--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,9 @@
     "jquery": "^1.11.3",
     "loader.js": "ember-cli/loader.js#3.2.1",
     "qunit": "~1.18.0",
-    "pure": "~0.6.0"
+    "materialize": "~0.97.0"
+  },
+  "resolutions": {
+    "jquery": "^1.11.3"
   }
 }
